--- a/todolist.html
+++ b/todolist.html
@@ -21,8 +21,8 @@
               </tr>
           </tbody>
       </table>
-    <button onclick="document.getElementById('modal').style.display='block'">
-      Add
+    <button onclick="document.getElementById('modal').style.display='block'" class="buttonFirst">
+      Fill Details
     </button>
     </div>
     <div class="main-div" id="modal">
