--- a/todolist.html
+++ b/todolist.html
@@ -38,5 +38,10 @@
       <button class="button" id="addtaskbtn" onclick="document.getElementById('opendatatable').style.display='block'">Submit</button>
     </div>
     </div>
+    <!-- <script>
+      document.getElementById("addtaskbtn").onclick = function () {
+        window.location.replace("opendatatable");
+      }
+    </script> -->
   </body>
 </html>
