--- a/todolist.html
+++ b/todolist.html
@@ -8,7 +8,7 @@
       <div class="div-style">
         <table class="table-div">
           <caption class="caption-style">
-            Your details will shown when you enter
+            Contact details
           </caption>
           <thead class="data-style">
             <tr>
@@ -19,17 +19,19 @@
           </thead>
           <tbody class="data-style" id="addtasklist"></tbody>
         </table>
+        <div class="button-div">
         <button
           onclick="document.getElementById('modal').style.display='block'"
           class="buttonFirst"
         >
-          Fill Details
+          Add contacts
         </button>
+        </div>
       </div>
     </div>
     <div class="main-div" id="modal">
       <div class="div">
-        <h1 class="header">Person data</h1>
+        <h1 class="header">Enter details</h1>
         <div class="input-main-div">
           <div>
             <input
