--- a/todolist.html
+++ b/todolist.html
@@ -147,7 +147,7 @@
           document.getElementById("modal").style.display = "block";
           alert("Please enter mobile number ");
         } else {
-          alert("Your form is edited");
+          alert("Your form is submitted");
           let contactdetails = [];
           let contactinfo = localStorage.getItem("localtask");
           if (!contactinfo) {
